test/process/error/arity-error.bpp
input x, y
  o = not x
  p = /\ x
  q = o not p
output o, p
